lot index ui updated

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -8,3 +8,5 @@
 
 // Components Styles
 @import "./components/module-box.scss";
+@import "./components/listing.scss";
+@import "./components/search.scss";
