--- a/public/sass/base/variables.scss
+++ b/public/sass/base/variables.scss
@@ -2,3 +2,6 @@ $cardLighBlue: #EAF2FF;
 $cardLightBg: #F8F9FE;
 
 $colorPrimary: #006FFD;
+$colorDanger: #FF616D;
+$colorSuccess: #3AC0A0;
+$colorWarning: #FFB37C;
