--- a/public/sass/base/mixins.scss
+++ b/public/sass/base/mixins.scss
@@ -15,3 +15,10 @@
     font-size: 20px;
     font-family: "Inter";
 }
+
+@mixin lineClamp($line) {
+    display: -webkit-box;
+    -webkit-line-clamp: $line;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
