--- a/public/sass/base/base.scss
+++ b/public/sass/base/base.scss
@@ -111,6 +111,33 @@ header h1{
                     color: #fff;
                 }
             }
+
+            &::after{
+                content: none;
+            }
+        }
+
+        .dropdown-menu{
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 0;
+            overflow: hidden;
+            min-width: 120px;
+            
+            li{
+                a{
+                    padding: 6px 10px;
+                    font-size: 14px;
+                    font-weight: 600;
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+
+                    svg{
+                        width: 15px;
+                    }
+                }
+            }
         }
     }
 }
